Mut4All/bug-labels/rust/A-diagnostics/86053.txt
Issue Title:
ICE: 'index out of bounds: the len is 8 but the index is 8', compiler/rustc_infer/src/infer/error_reporting/nice_region_error/util.rs:61:22 · Issue #86053 · rust-lang/rust · GitHub

Rust Code:
fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnOnce ( & 'a & 'b usize ) {
}

Bug Trace:
error: expected type, found `,`
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:47
  |
1 | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnO...
  |                                               ^ expected type

error: unexpected `self` parameter in function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:51
  |
1 | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnO...
  |                                                   ^^^^ must be the first parameter of an associated function

error: unexpected `self` parameter in function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:58
  |
1 | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnO...
  |                                                          ^^^^ must be the first parameter of an associated function

error: unexpected `self` parameter in function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:67
  |
1 | ...            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnOnce ( & 'a & 'b usize ) {
  |                                    ^^^^ must be the first parameter of an associated function

error: unexpected `self` parameter in function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:76
  |
1 | ...   ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnOnce ( & 'a & 'b usize ) {
  |                                    ^^^^ must be the first parameter of an associated function

error: unexpected `self` parameter in function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:91
  |
1 | ...elf ,   self ,   self , ... ,   self ,   self , ... ) where F : FnOnce ( & 'a & 'b usize ) {
  |                                    ^^^^ must be the first parameter of an associated function

error: unexpected `self` parameter in function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:100
  |
1 | ...elf ,   self , ... ,   self ,   self , ... ) where F : FnOnce ( & 'a & 'b usize ) {
  |                                    ^^^^ must be the first parameter of an associated function

error: `...` must be the last argument of a C-variadic function
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:83
  |
1 | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnO...
  |                                                                                   ^^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:83
  |
1 | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnO...
  |                                                                                   ^^^^

error: only foreign or `unsafe extern "C" functions may be C-variadic
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:107
  |
1 | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnO...
  |                                                                                                           ^^^^

error[E0412]: cannot find type `F` in this scope
  --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:119
   |
1  |   fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : ...
   |                                                                                                                         ^
   |
help: a trait with a similar name exists
   |
1  | fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where Fn : FnOnce ( & 'a & 'b usize ) {
   |                                                                                                                       ^^
help: you might be missing a type parameter
   |
1  | fn ordering4 < 'a , 'b, F     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : FnOnce ( & 'a & 'b usize ) {
   |                       ^^^

error[E0658]: C-variadic functions are unstable
 --> default_finding_folder_rust/crash_20210604_133458_002a/delta/perses_result/mutant.rs:1:1
  |
1 | / fn ordering4 < 'a , 'b     > ( a :            ,   self , self ,   self ,   self , ... ,   self ,   self , ... ) where F : F...
2 | | }
  | |_^
  |
  = note: see issue #44930 <https://github.com/rust-lang/rust/issues/44930> for more information
  = help: add `#![feature(c_variadic)]` to the crate attributes to enable

thread 'rustc' panicked at 'index out of bounds: the len is 8 but the index is 8', compiler/rustc_infer/src/infer/error_reporting/nice_region_error/util.rs:61:22
stack backtrace:
   0: rust_begin_unwind
             at /rustc/dbe459dedd33470f2cb28101157de316caaffa66/library/std/src/panicking.rs:515:5
   1: core::panicking::panic_fmt
             at /rustc/dbe459dedd33470f2cb28101157de316caaffa66/library/core/src/panicking.rs:92:14
   2: core::panicking::panic_bounds_check
             at /rustc/dbe459dedd33470f2cb28101157de316caaffa66/library/core/src/panicking.rs:69:5
   3: rustc_infer::infer::error_reporting::nice_region_error::util::<impl rustc_infer::infer::error_reporting::nice_region_error::NiceRegionError>::find_param_with_region
   4: rustc_infer::infer::error_reporting::nice_region_error::NiceRegionError::try_report_from_nll
   5: rustc_infer::infer::error_reporting::nice_region_error::NiceRegionError::try_report
   6: rustc_infer::infer::error_reporting::nice_region_error::<impl rustc_infer::infer::InferCtxt>::try_report_nice_region_error
   7: rustc_infer::infer::error_reporting::<impl rustc_infer::infer::InferCtxt>::report_region_errors
   8: rustc_infer::infer::InferCtxt::resolve_regions_and_report_errors
   9: rustc_typeck::check::regionck::<impl rustc_typeck::check::fn_ctxt::FnCtxt>::regionck_item
  10: rustc_typeck::check::inherited::InheritedBuilder::enter
  11: rustc_typeck::check::wfcheck::check_item_fn
  12: rustc_typeck::check::wfcheck::check_item_well_formed
  13: rustc_query_system::query::plumbing::get_query_impl
  14: <rustc_query_impl::Queries as rustc_middle::ty::query::QueryEngine>::check_item_well_formed
  15: <rustc_typeck::check::wfcheck::CheckTypeWellFormedVisitor as rustc_hir::intravisit::Visitor>::visit_item
  16: rustc_data_structures::sync::par_for_each_in
  17: rustc_hir::hir::Crate::par_visit_all_item_likes
  18: rustc_session::session::Session::track_errors
  19: rustc_typeck::check_crate
  20: rustc_interface::passes::analysis
  21: rustc_query_system::query::plumbing::get_query_impl
  22: <rustc_query_impl::Queries as rustc_middle::ty::query::QueryEngine>::analysis
  23: rustc_interface::passes::QueryContext::enter
  24: rustc_span::with_session_globals
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.54.0-nightly (dbe459ded 2021-06-02) running on x86_64-unknown-linux-gnu

note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib

query stack during panic:
#0 [check_item_well_formed] checking that `ordering4` is well-formed
#1 [analysis] running analysis passes on this crate
end of query stack
error: aborting due to 12 previous errors

Some errors have detailed explanations: E0412, E0658.
For more information about an error, try `rustc --explain E0412`.

Bug Labels:
A-diagnostics, C-bug, F-c_variadic, I-ICE, P-medium, T-compiler, glacier
